[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/FierceToothSprite.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Enemies/Crabby.tres" type="Resource" id=2]
[ext_resource path="res://Enemies/FierceToothCollision.tres" type="Shape2D" id=3]
[ext_resource path="res://Enemies/FierceToothHitBox.tres" type="Shape2D" id=4]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Hitbox.tscn" type="PackedScene" id=17]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 10 )
Enemy = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = ExtResource( 1 )
animation = "Run"
playing = true
flip_h = true

[node name="TerrainCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -9.5 )
shape = ExtResource( 3 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 8, -1 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -8, -1 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Hitbox" parent="." instance=ExtResource( 17 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = ExtResource( 4 )
